bitnami/monitoring/monitoring-main/kpt/loki/templates/service-memberlist.yaml
---
# Source: monitoring/charts/loki/templates/service-memberlist.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-memberlist
  labels:
    helm.sh/chart: loki-4.4.2
    app.kubernetes.io/name: loki
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "main-5e53303"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp
      port: 7946
      targetPort: http-memberlist
      protocol: TCP
  selector:
    app.kubernetes.io/name: loki
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/part-of: memberlist
