bitnami/monitoring/monitoring-main/kpt/loki/templates/ingress.yaml
# Source: monitoring/charts/loki/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-loki
  namespace: monitoring
  labels:
    app: loki
    chart: loki-2.10.1
    release: monitoring
    heritage: Helm
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-selfsigned" # {"$kpt-set":"cert-issuer"}
    cert-manager.k8s.io/cluster-issuer: "letsencrypt-selfsigned" # {"$kpt-set":"cert-issuer"}
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-loki-basic-auth@kubernetescrd
spec:
  tls:
  - hosts:
    - "loki.local.ertia.cloud" # {"$kpt-set":"loki-domain"}
    secretName: loki-tls
  rules:
  - host: "loki.local.ertia.cloud" # {"$kpt-set":"loki-domain"}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-loki
            port:
              number: 3100
  - host: "loki.local.ertia.cloud" # {"$kpt-set":"loki-domain"}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-loki
            port:
              number: 3100
